// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots all have results (after update) 1`] = `
"Snapshot Summary
 › 1 snapshot written from 1 test suite.
 › 1 snapshot failed from 1 test suite. Inspect your code changes or run \`yarn test -u\` to update them.
 › 1 snapshot updated from 1 test suite.
 › 1 snapshot file removed from 1 test suite.
 › 1 snapshot removed from 1 test suite.
   ↳ ../path/to/suite_one
       • unchecked snapshot 1

Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   1 failed, 1 removed, 1 file removed, 1 updated, 1 written, 2 passed, 2 total
Time:        0.01s
Ran all test suites.
"
`;

exports[`snapshots all have results (no update) 1`] = `
"Snapshot Summary
 › 1 snapshot written from 1 test suite.
 › 1 snapshot failed from 1 test suite. Inspect your code changes or run \`yarn test -u\` to update them.
 › 1 snapshot updated from 1 test suite.
 › 1 snapshot file obsolete from 1 test suite. To remove it, run \`yarn test -u\`.
 › 1 snapshot obsolete from 1 test suite. To remove it, run \`yarn test -u\`.
   ↳ ../path/to/suite_one
       • unchecked snapshot 1

Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   1 failed, 1 obsolete, 1 file obsolete, 1 updated, 1 written, 2 passed, 2 total
Time:        0.01s
Ran all test suites.
"
`;

exports[`snapshots needs update with npm test 1`] = `
"Snapshot Summary
 › 2 snapshots failed from 1 test suite. Inspect your code changes or run \`npm test -- -u\` to update them.

Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   2 failed, 2 total
Time:        0.01s
Ran all test suites.
"
`;

exports[`snapshots needs update with yarn test 1`] = `
"Snapshot Summary
 › 2 snapshots failed from 1 test suite. Inspect your code changes or run \`yarn test -u\` to update them.

Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   2 failed, 2 total
Time:        0.01s
Ran all test suites.
"
`;
